--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,3 +15,29 @@ $active-color: #1a730d; // TOC header color
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+
+figure {
+    display: inline-block;
+    //border: 1px dotted gray;
+    margin: 0px 15px 0px 0px;
+}
+figure img {
+    vertical-align: top;
+    margin: 0px;
+}
+figure figcaption {
+    //border: 1px dotted blue;
+    text-align: center;
+    margin-bottom: 1em;
+
+}
+img.thumb {
+	width: 200px;
+  //height: 300px;
+  //display: block;
+  //margin-left: auto;
+  //margin-right: auto;
+  //width: 15%;
+  //height: 15%;
+}
